[FIX] mail: make chatter flex in Documents app
The chatter in documents was not flex, which made it take a lot
of space without any wrapping. As a result, usually chatter took
all the screen and content was massively overflowing, resulting
in poor UX.

This was caused by a specific stylerule in documents with chatter
that made sense in a earlier version of chatter CSS, but this
is no longer needed.

Also we actually want to reuse most style of chatter in form view.
This commit adds `o-mail-ChatterContainer` classname on same
HTML node as `o-mail-Form-Chatter` and adapts style, so that
Document can set this classname to reuse style.

opw-3681435

X-original-commit: 6944eb3118b957618f493eb85339ef811ef59025

--- a/addons/mail/static/src/chatter/web/form_renderer.scss
+++ b/addons/mail/static/src/chatter/web/form_renderer.scss
@@ -2,7 +2,8 @@
 // Layout
 // ------------------------------------------------------------------
 
-.o-mail-Form-chatter {
+.o-mail-ChatterContainer, .o-mail-Form-chatter {
+    --Chatter-asideExtraWidth: 0px; // to take into account more items, e.g. "close" chatter feature
     &.o-aside {
         @media (max-width: 1920px) {
             --ChatterAsideForm-padding-left: #{map-get($spacers, 2)};
@@ -11,11 +12,7 @@
         flex-shrink: 0;
         flex-grow: 1;
         padding: map-get($spacers, 0);
-        width: $o-mail-Chatter-minWidth;
-
-        .o_ChatterContainer {
-            width: auto;
-        }
+        width: calc(#{$o-mail-Chatter-minWidth} + var(--Chatter-asideExtraWidth));
     }
 
     &.o-isInFormSheetBg {
@@ -40,7 +37,7 @@
 // Style
 // ------------------------------------------------------------------
 
-.o-mail-Form-chatter {
+.o-mail-ChatterContainer, .o-mail-Form-chatter {
     display: flex;
     margin: 0 auto;
     padding-bottom: map-get($spacers, 5);
